@@ -165,7 +165,7 @@ public class MasterProductCatBarcodesEditFragment extends BaseFragment implement
         this::onMenuItemClick
     );
     activity.updateFab(
-        R.drawable.ic_round_backup,
+        R.drawable.ic_round_save,
         R.string.action_save,
         Constants.FAB.TAG.SAVE,
         true,
