@@ -168,6 +168,24 @@ public class MasterProductFragment extends BaseFragment {
             || binding.editTextName.getText().length() == 0) {
           activity.showKeyboard(binding.editTextName);
         }
+      } else if (event.getType() == Event.TRANSACTION_SUCCESS) {
+        if (args.getAction().equals(ACTION.CREATE) && viewModel.isActionEdit()) {
+          activity.updateFab(
+              R.drawable.ic_round_save,
+              R.string.action_save_close,
+              Constants.FAB.TAG.SAVE,
+              savedInstanceState == null,
+              () -> {
+                if (!viewModel.getFormData().isNameValid()) {
+                  clearInputFocus();
+                  activity.showKeyboard(binding.editTextName);
+                } else {
+                  clearInputFocus();
+                  viewModel.saveProduct(true);
+                }
+              }
+          );
+        }
       }
     });
 
@@ -182,6 +200,24 @@ public class MasterProductFragment extends BaseFragment {
         viewModel.setCurrentQueueLoading(null);
       }
     });
+
+    viewModel.getActionEditLive().observe(getViewLifecycleOwner(), isEdit -> activity.updateBottomAppBar(
+        true,
+        isEdit
+            ? R.menu.menu_master_product_edit
+            : R.menu.menu_master_product_create,
+        menuItem -> {
+          if (menuItem.getItemId() == R.id.action_delete) {
+            viewModel.deleteProductSafely();
+            return true;
+          }
+          if (menuItem.getItemId() == R.id.action_save) {
+            viewModel.saveProduct(true);
+            return true;
+          }
+          return false;
+        }
+    ));
 
     String action = (String) getFromThisDestinationNow(Constants.ARGUMENT.ACTION);
     if (action != null) {
@@ -236,29 +272,12 @@ public class MasterProductFragment extends BaseFragment {
         binding.appBar, false, binding.scroll, false
     );
     activity.getScrollBehavior().setBottomBarVisibility(true);
-    activity.updateBottomAppBar(
-        true,
-        viewModel.isActionEdit()
-            ? R.menu.menu_master_product_edit
-            : R.menu.menu_master_product_create,
-        menuItem -> {
-          if (menuItem.getItemId() == R.id.action_delete) {
-            viewModel.deleteProductSafely();
-            return true;
-          }
-          if (menuItem.getItemId() == R.id.action_save_not_close) {
-            viewModel.saveProduct(false);
-            return true;
-          }
-          return false;
-        }
-    );
     activity.updateFab(
-        R.drawable.ic_round_save,
-        R.string.action_save_close,
-        Constants.FAB.TAG.SAVE,
+        viewModel.isActionEdit() ? R.drawable.ic_round_save : R.drawable.ic_round_save_as,
+        viewModel.isActionEdit() ? R.string.action_save : R.string.action_save_not_close,
+        viewModel.isActionEdit() ? Constants.FAB.TAG.SAVE : Constants.FAB.TAG.SAVE_NOT_CLOSE,
         savedInstanceState == null,
-        () -> viewModel.saveProduct(true)
+        () -> viewModel.saveProduct(viewModel.isActionEdit())
     );
   }
 
