@@ -22,9 +22,15 @@
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <item
+    android:id="@+id/action_delete"
+    android:title="@string/action_delete"
+    android:icon="@drawable/ic_round_delete_anim"
+    app:showAsAction="always" />
+
+  <item
     android:id="@+id/action_save"
     android:title="@string/action_save_close"
     android:icon="@drawable/ic_round_save"
-    app:showAsAction="always" />
+    app:showAsAction="ifRoom" />
 
 </menu>
