@@ -18,13 +18,21 @@
   -->
 
 <menu
+  xmlns:tools="http://schemas.android.com/tools"
   xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  tools:ignore="AlwaysShowAction">
 
   <item
-    android:id="@+id/action_save"
-    android:title="@string/action_save_close"
-    android:icon="@drawable/ic_round_save"
+    android:id="@+id/action_delete"
+    android:title="@string/action_delete"
+    android:icon="@drawable/ic_round_delete_anim"
+    app:showAsAction="always" />
+
+  <item
+    android:id="@+id/action_clear_form"
+    android:title="@string/action_clear_form"
+    android:icon="@drawable/ic_round_cancel"
     app:showAsAction="always" />
 
 </menu>
