@@ -4,6 +4,7 @@
 - Improved: Pictures in recipe or product descriptions now can be up to 10MB large (#698)
 - Improved: Keyboard is displayed more reliably and quickly
 - Improved: Form focus on master object pages & fixed plural field for English on QU page
+- Improved: "Create recipe" page and "Create product" page now use "save and not close" buttons
 - Fixed: Crash on startup with Android Lollipop (and maybe higher)
 - Fixed: Prevent crash when opening qu conversion page (#708)
 
